--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,26 @@
             <input type="text" id="argueInput" placeholder="不服？试试说服AI...">
             <button class="action-btn" onclick="argue()">狡辩</button>
         </div>
+
+        <!-- 分享按钮 -->
+        <div class="share-box" style="display: none;">
+            <button class="action-btn share-btn" onclick="shareGameMoment()">
+                <svg class="share-icon" viewBox="0 0 24 24" width="16" height="16">
+                    <path fill="currentColor" d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92-1.31-2.92-2.92-2.92z"/>
+                </svg>
+                分享这一刻
+            </button>
+        </div>
+
+        <!-- 分享墙 -->
+        <div class="share-wall">
+            <h3>精彩时刻</h3>
+            <div class="moments-container"></div>
+        </div>
     </div>
     <script src="script.js"></script>
+
+    <!-- 添加 html2canvas 库 -->
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </body>
 </html> 
